About : fix transition bug for Collapse

--- a/src/sass/components/Collapse.scss
+++ b/src/sass/components/Collapse.scss
@@ -1,28 +1,3 @@
-@keyframes opacityOpen {
-    0% {
-        opacity: 0;
-    }
-    30% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-@keyframes opacityClose {
-    0% {
-        opacity: 1;
-        height: auto;
-    }
-    40% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 0;
-        height: 0;
-    }
-}
-
 .collapse-bar {
     background-color: $primary-color;
     display: flex;
