--- a/src/sass/pages/About.scss
+++ b/src/sass/pages/About.scss
@@ -3,7 +3,8 @@
 }
 
 .container-collapse {
-    @include flex-column;
+    display: flex;
+    flex-wrap: wrap;
     gap: 30px;
     margin: 40px 100px;
     @media (max-width: 900px) {
